# Moonlyte

./: .gitignore  LICENSE  README.md  go.mod  main.go
3d-printing/: F.MainBodyBase.stl  F.MainBodyTop.stl  F.StepperSupport.stl  FocuserBox.scad  FocuserBox.stl  FocuserBoxBase.stl  FocuserBoxLid.stl  FocuserV5.scad  FocuserV6.scad  FocuserV6StepperFixing.stl  Pulley_composer.scad  Pulley_composer.stl
3d-printing/V1/: F.FocusAttach.stl  FocuserBoxBigger.scad  FocuserBoxBiggerBase.stl  FocuserBoxBiggerLid.stl  FocuserV5.scad
3d-printing/V2/: FocuserV6Cover.stl  Pulley_composer.scad
circuit/focuser/: focuser.kicad_prl  focuser.kicad_pro  focuser.kicad_sch  fp-info-cache
code/C/: CMakeLists.txt  commandhandler.c  commandhandler.h  deploy.sh  main.c  motorcontrol.c  motorcontrol.h
photos etc/: Moonlite.txt  connections.ods
